--- a/dev/static/stylus/section/production.styl
+++ b/dev/static/stylus/section/production.styl
@@ -107,6 +107,22 @@
     height 20px
     fill white
 
+.production__promo-modal
+  max-width 80%
+  padding 0
+
+.production__promo-modal-wrap
+  position relative
+  padding-bottom 56.25%
+  padding-top 25px
+  height 0
+  iframe
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
+
 .production__info
   padding 100px 110px
   @media (max-width breakpoint-xxl)
